# tests-tps-iia

./: .gitmodules  .gitmodules.bk  LICENSE  README.md  obfuscate.sh  setup.cfg
obf/: linear_regression.py
obf/solutions/: __init__.py  linear_regression.py
src/TestsTPS/: linear_regression_validator.py
src/multiply/: multiply_by_three.py
test/: __init__.py  test_divide_by_three.py  test_linear_regression_validator.py  test_multiply_by_three.py
