[metadata]
name = tests-tps-iia
version = 1.0.0
author = Juan Zuloaga
author_email = jzuloaga@fi.uba.ar
description = UT for TA136, TB056, TB057, 8625. FIUBA
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url =  https://github.com/xvan/tests-tps-iia
project_urls =
    Bug Tracker = https://github.com/xvan/tests-tps-iia/issues
    repository =  https://github.com/xvan/tests-tps-iia
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy    

[options.extras_require]
tests = pyarmor

[options.packages.find]
where = src
